frontend/tests/cases/negative/indexed/variableNotInResult.gr
data Vec (n : Nat) a = Blank
data VecX (a : Type) where
  VecX : ∀ {n : Nat} . Vec n a → VecX a